# vyapar-django-rest-api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
core/: apps.py  auth.py  exceptions.py  inject.py  model_mixins.py  renderers.py  request_types.py  utils.py
core/migrations/: 0001_create_schemas.py
core/migrations/custom_migrations/: create_schemas.py
core/token/: inject.py  types.py
core/token/domain/use_cases/: create_token_use_case.py  decode_expired_token_use_case.py  decode_token_use_case.py
shop/: apps.py  inject.py  models.py  types.py
shop/migrations/: 0001_initial.py
shop/shop/: inject.py
shop/shop/data/: abstract_repo.py  db_repo.py
shop/shop/domain/: domain_models.py
tools/: lint
user/: apps.py  exceptions.py  inject.py  models.py  types.py  urls.py
user/migrations/: 0001_initial.py
user/user/: inject.py
user/user/data/: abstract_repo.py  db_repo.py
user/user/domain/: domain_models.py
user/user/domain/use_cases/: create_user_use_case.py  get_user_use_case.py  send_otp_use_case.py  verify_otp_use_case.py
user/user/presentation/: types.py  urls.py  views.py
vyapar/: asgi.py  settings.py  urls.py  wsgi.py
