[tool.poetry]
name = "vyapar"
version = "0.1.0"
description = ""
authors = ["Aditya Kumar Kasaudhan <akasaudhan02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 88

[tool.djlint]
profile="django"

[tool.ruff]
line-length = 88
